Syntaxe/Test/Invalide/tokens_flottants.deca
// Description:
//    tests des flottants.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    crée le 08/01/2012

01.23
01.23E34
01.23E+34
01.23E-34
01.23e34
01.23e+34
01.23e-34
